# bruteforceSHA256

./: LICENSE  README.md
MPI/: CMakeLists.txt  alphabet.h  brute.cpp  brute.h  main.cpp  master.cpp  master.h  mpiMsgTag.h  worker.cpp  worker.h
noMPI/: CMakeLists.txt  allowedChars.h  alphabet.h  brute.cpp  brute.h  test.cpp
